--- a/index.html
+++ b/index.html
@@ -415,14 +415,10 @@ M.Chalanjana Ranasinghe
     <div class="container mx-auto px-6">
          <h2 class="section-title text-4xl font-bold text-center mb-16 text-gray-900 dark:text-white" data-aos="fade-up">අලුත් අවුරුද්දේ වැදගත්කම</h2>
          <div class="grid md:grid-cols-2 gap-12 lg:gap-16 items-center">
-             <div data-aos="fade-right" data-aos-delay="100" class="aspect-w-16 aspect-h-10 rounded-xl overflow-hidden shadow-lg">
-                 <!-- Image Placeholder: Replace with <img> tag -->
-                 <div class="img-placeholder">
-                    <i class="fas fa-calendar-star"></i>
-                    <span>අවුරුදු උත්සවයක දර්ශනයක්<br>(පවුලක් / ප්‍රජාවක්)</span>
-                 </div>
-                 <!-- <img src="path/to/your/significance-image.jpg" alt="අලුත් අවුරුදු උත්සවය" class="object-cover w-full h-full"> -->
-             </div>
+            <div data-aos="fade-right" data-aos-delay="100" class="aspect-w-16 aspect-h-10 rounded-xl overflow-hidden shadow-lg">
+                <img src="./WhatsApp Image 2025-04-13 at 14.05.26_ab51a3a7.jpg" alt="අලුත් අවුරුදු උත්සවය" class="object-cover w-full h-full">
+            </div>
+            
              <div data-aos="fade-left" data-aos-delay="200" class="prose dark:prose-invert max-w-none text-gray-700 dark:text-gray-300 lg:text-lg">
                  <p class="leading-relaxed mb-5">
                     සිංහල හා හින්දු අලුත් අවුරුද්ද ශ්‍රී ලංකාවේ <strong class="text-primary-dark dark:text-primary-light">ප්‍රධානතම සංස්කෘතික මංගල්‍යයයි</strong>. එය හිරු මීන රාශියෙන් මේෂ රාශියට සංක්‍රමණය වීම සමරන අතර, සොබාදහමේ නව පිබිදීමක්, කෘෂිකාර්මික චක්‍රයක ඇරඹුමක් සහ අස්වැන්න නෙලීමෙන් පසු ලැබෙන විවේකයද විදහා දක්වයි.
