--- a/index.html
+++ b/index.html
@@ -229,29 +229,30 @@ M.Chalanjana Ranasinghe
         /* Define CSS Variables for Colors */
         :root {
              /* Light Mode Pastels */
-            --color-primary-100: #FFF7ED; /* Very Light Orange */
-            --color-primary-200: #FFEDD5; /* Light Orange */
-            --color-primary-300: #FDBA74; /* Orange 300 */
-            --color-primary-400: #FB923C; /* Orange 400 */
-            --color-primary-500: #F97316; /* Orange 500 */
-            --color-primary-600: #EA580C; /* Orange 600 */
-            --color-primary-700: #C2410C; /* Orange 700 */
+              /* Dark Mode Pastels (adjust brightness/saturation) */
+              --color-primary-100: #4d2c0b;
+            --color-primary-200: #7a4614;
+            --color-primary-300: #b96a20; /* Orange 300 Darkened */
+            --color-primary-400: #f68b39; /* Orange 400 Brighter */
+            --color-primary-500: #fa9d51; /* Orange 500 Brighter */
+            --color-primary-600: #fcae6f;
+            --color-primary-700: #fdc090;
 
-            --color-secondary-300: #FDA4AF; /* Rose 300 */
-            --color-secondary-400: #FB7185; /* Rose 400 */
-            --color-secondary-500: #F43F5E; /* Rose 500 */
-            --color-secondary-600: #E11D48; /* Rose 600 */
+            --color-secondary-300: #ec6a7f; /* Rose 300 Brighter */
+            --color-secondary-400: #f68799; /* Rose 400 Brighter */
+            --color-secondary-500: #f8a3b1; /* Rose 500 Brighter */
+            --color-secondary-600: #fabcc7;
 
-            --color-accent-400: #5EEAD4; /* Teal 300 */
-            --color-accent-500: #2DD4BF; /* Teal 400 */
-            --color-accent-600: #14B8A6; /* Teal 500 */
+            --color-accent-400: #67e1ca; /* Teal 300 Brighter */
+            --color-accent-500: #81e8d7; /* Teal 400 Brighter */
+            --color-accent-600: #9cf0e4;
 
-            --text-main: #374151; /* Gray 700 */
-            --text-muted: #6B7280; /* Gray 500 */
-            --bg-main: #FFF8F0; /* Body background */
-            --bg-card: rgba(255, 255, 255, 0.7);
-            --bg-header: rgba(255, 250, 245, 0.85);
-            --border-color: rgba(0, 0, 0, 0.05);
+            --text-main: #E5E7EB; /* Gray 200 */
+            --text-muted: #9CA3AF; /* Gray 400 */
+            --bg-main: #1a1d24;
+            --bg-card: rgba(30, 33, 40, 0.7);
+            --bg-header: rgba(26, 29, 36, 0.85);
+            --border-color: rgba(255, 255, 255, 0.1);
         }
 
         .dark {
