--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ M.Chalanjana Ranasinghe
          </h1>
         <!-- REMOVED the duplicate H1 that was here -->
         <p class="text-lg md:text-xl text-gray-600 dark:text-gray-400 mb-10 max-w-3xl mx-auto opacity-0" style="transform: translateY(30px);" id="hero-subtitle">
-            සාමය, සතුට සහ සෞභාග්‍යය පිරි 2025 සිංහල හා හින්දු අලුත් අවුරුද්දක් ඔබ සැමට උදා වේවා! නව බලාපොරොත්තු සමඟින් මෙම උත්සව සමය සමරමු.
+            මේ ලැබුවාවු 2025 නව වසර ඔබටත් පවුලේ සියලු දෙනාටත් සාමය සතුට පිරි නිදුක් නීරෝගී සුභම සුභ නව වසරක් වේවා...! .
         </p>
 
         <!-- Countdown Timer -->
